--- a/JavaScript/AsyncJS/Github-Card/style.css
+++ b/JavaScript/AsyncJS/Github-Card/style.css
@@ -49,7 +49,6 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 90vh;
-
 }
 
 .github-card {
@@ -104,4 +103,21 @@ body {
 .stat-label {
     font-size: 0.8rem;
     color: #888;
+}
+#card-error{
+    background-color: #fff;
+    padding: 2rem;
+    border-radius: 8px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 400px;
+    text-align: center;
+    display: none;
+}
+.error-card-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 90vh;
+    overflow: none;
 }
