--- a/JS-Referesher/Projects/CallApp/style.css
+++ b/JS-Referesher/Projects/CallApp/style.css
@@ -169,29 +169,40 @@ button:hover{
 
 /* Avatar */
 .avatar img {
-    width: 50px;
-    height: 50px;
+    width: 80px;
+    height: 80px;
     border-radius: 50%;
     object-fit: cover;
 }
 
+.info{
+    display: flex;
+    flex-direction: column;
+    gap: 0.2rem;
+}
+.info-container{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    /* background-color: #1dd1a1; */
+}
 /* Info */
 .info h3 {
-    font-size: 1rem;
+    font-size: 1.4rem;
 }
 
 .info p,
 .info small {
-    color: #888;
     font-size: 0.8rem;
+    
 }
 
 /* Meta */
-.meta {
+/* .meta {
     text-align: right;
     font-size: 0.8rem;
     color: #888;
-}
+} */
 
 /* Actions */
 .actions {
@@ -223,13 +234,16 @@ button:hover{
     display: flex;
     flex-direction: column;
     gap: 10px;
-    margin-left: 20px;
+    margin-left: 1rem;
+    margin-top: 1.5rem;
 }
 
 .dot {
-    width: 12px;
-    height: 12px;
+    width: 20px;
+    height: 20px;
     border-radius: 50%;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
 }
 
 .black { background: black; }
