React-Project-movieAPP(Completed)

--- a/React/Projects/movieAPP/movieAPP/src/index.css
+++ b/React/Projects/movieAPP/movieAPP/src/index.css
@@ -50,7 +50,7 @@
 
 @layer components {
   .pattern {
-    @apply bg-hero-pattern w-full h-screen bg-center bg-cover absolute z-0;
+    @apply bg-hero-pattern w-full h-100 bg-center bg-cover absolute z-0 opacity-20;
   }
 
   .wrapper {
@@ -58,7 +58,7 @@
   }
 
   .trending {
-    @apply mt-20;
+    @apply mt-45;
 
     & ul {
       @apply flex flex-row overflow-y-auto gap-5 -mt-10 w-full hide-scrollbar;
@@ -78,7 +78,7 @@
   }
 
   .search {
-    @apply w-full bg-light-100/5 px-4 py-3 rounded-lg mt-10 max-w-3xl mx-auto;
+    @apply w-full bg-dark-100 px-4 py-3 rounded-lg mt-10 max-w-3xl mx-auto;
 
     & div {
       @apply relative flex items-center;
